--- a/package.json
+++ b/package.json
@@ -35,15 +35,18 @@
     "eslint": ">=5"
   },
   "devDependencies": {
-    "eslint": "5.16.0",
-    "eslint-plugin-babel": "5.3.0",
-    "eslint-plugin-eslint-comments": "3.1.1",
-    "eslint-plugin-import": "2.17.2",
-    "eslint-plugin-jest": "^22.6.4",
+    "@typescript-eslint/parser": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "eslint": "6.2.1",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-eslint-comments": "^3.1.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.15.1",
     "eslint-plugin-jest-formatting": "^0.0.9",
-    "eslint-plugin-no-secrets": "0.1.2",
-    "eslint-plugin-ramda": "2.5.1",
-    "eslint-plugin-react": "7.13.0",
-    "eslint-plugin-simple-import-sort": "3.1.0"
+    "eslint-plugin-no-secrets": "^0.1.2",
+    "eslint-plugin-ramda": "^2.5.1",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-simple-import-sort": "^4.0.0",
+    "typescript": "^3.5.3"
   }
 }
