--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-no-secrets": "^0.1.2",
     "eslint-plugin-ramda": "^2.5.1",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "eslint-plugin-simple-import-sort": "^4.0.0",
     "typescript": "^3.5.3"
   }
