--- a/package.json
+++ b/package.json
@@ -31,23 +31,29 @@
   "engines": {
     "node": ">=10"
   },
+  "main": "index.js",
+  "scripts": {
+    "find-deprecated": "eslint-find-rules --deprecated .eslintrc.json",
+    "find-unused": "eslint-find-rules --unused .eslintrc.json"
+  },
   "peerDependencies": {
-    "eslint": ">=5"
+    "eslint": ">=6"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
-    "eslint": "6.2.1",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-eslint-comments": "^3.1.2",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.15.1",
-    "eslint-plugin-jest-formatting": "^0.0.9",
-    "eslint-plugin-no-secrets": "^0.1.2",
-    "eslint-plugin-ramda": "^2.5.1",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^2.0.1",
-    "eslint-plugin-simple-import-sort": "^4.0.0",
-    "typescript": "^3.5.3"
+    "@typescript-eslint/eslint-plugin": "2.5.0",
+    "@typescript-eslint/parser": "2.5.0",
+    "eslint": "6.5.1",
+    "eslint-find-rules": "3.4.0",
+    "eslint-plugin-babel": "5.3.0",
+    "eslint-plugin-eslint-comments": "3.1.2",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jest": "22.20.0",
+    "eslint-plugin-jest-formatting": "1.1.0",
+    "eslint-plugin-no-secrets": "0.3.4",
+    "eslint-plugin-ramda": "2.5.1",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-react-hooks": "2.2.0",
+    "eslint-plugin-simple-import-sort": "4.0.0",
+    "typescript": "^3.6.4"
   }
 }
