--- a/package.json
+++ b/package.json
@@ -37,23 +37,24 @@
     "find-unused": "eslint-find-rules --unused .eslintrc.json"
   },
   "peerDependencies": {
-    "eslint": ">=6"
+    "eslint": ">=6",
+    "typescript": ">=3.7"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "2.5.0",
-    "@typescript-eslint/parser": "2.5.0",
-    "eslint": "6.5.1",
+    "@typescript-eslint/eslint-plugin": "2.9.0",
+    "@typescript-eslint/parser": "2.9.0",
+    "eslint": "6.7.2",
     "eslint-find-rules": "3.4.0",
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-eslint-comments": "3.1.2",
     "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jest": "22.20.0",
-    "eslint-plugin-jest-formatting": "1.1.1",
+    "eslint-plugin-jest": "23.1.1",
+    "eslint-plugin-jest-formatting": "1.2.0",
     "eslint-plugin-no-secrets": "0.3.4",
     "eslint-plugin-ramda": "2.5.1",
-    "eslint-plugin-react": "7.16.0",
-    "eslint-plugin-react-hooks": "2.2.0",
-    "eslint-plugin-simple-import-sort": "4.0.0",
-    "typescript": "^3.6.4"
+    "eslint-plugin-react": "7.17.0",
+    "eslint-plugin-react-hooks": "2.3.0",
+    "eslint-plugin-simple-import-sort": "5.0.0",
+    "typescript": "^3.7.2"
   }
 }
