--- a/package.json
+++ b/package.json
@@ -38,8 +38,20 @@
     "lint": "eslint --ext=tsx --ext=ts --ext=mjs --ext=js --ext=jsx ."
   },
   "peerDependencies": {
-    "eslint": ">=6",
-    "typescript": ">=3.7"
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-eslint-comments": "^3.1.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.1.1",
+    "eslint-plugin-jest-formatting": "^1.2.0",
+    "eslint-plugin-no-secrets": "^0.3.4",
+    "eslint-plugin-ramda": "^2.5.1",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-simple-import-sort": "^5.0.0",
+    "typescript": "^3.7.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "2.10.0",
@@ -56,6 +68,6 @@
     "eslint-plugin-react": "7.17.0",
     "eslint-plugin-react-hooks": "2.3.0",
     "eslint-plugin-simple-import-sort": "5.0.0",
-    "typescript": "^3.7.2"
+    "typescript": "3.7.3"
   }
 }
