--- a/package.json
+++ b/package.json
@@ -33,41 +33,40 @@
   },
   "main": "index.js",
   "scripts": {
-    "find-deprecated": "eslint-find-rules --deprecated .eslintrc.json",
-    "find-unused": "eslint-find-rules --unused .eslintrc.json",
+    "find-deprecated": "eslint-find-rules --deprecated ./.eslintrc.json",
+    "find-unused": "eslint-find-rules --unused ./.eslintrc.json",
     "lint": "eslint --ext=tsx --ext=ts --ext=mjs --ext=js --ext=jsx ."
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-eslint-comments": "^3.1.2",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^23.1.1",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "eslint": "^7.2.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.21.1",
+    "eslint-plugin-jest": "^23.13.2",
     "eslint-plugin-jest-formatting": "^1.2.0",
-    "eslint-plugin-no-secrets": "^0.3.4",
+    "eslint-plugin-no-secrets": "^0.6.8",
     "eslint-plugin-ramda": "^2.5.1",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "eslint-plugin-simple-import-sort": "^5.0.0",
-    "typescript": "^3.7.3"
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "2.10.0",
-    "@typescript-eslint/parser": "2.10.0",
-    "eslint": "6.7.2",
-    "eslint-find-rules": "3.4.0",
-    "eslint-plugin-babel": "5.3.0",
-    "eslint-plugin-eslint-comments": "3.1.2",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jest": "23.1.1",
+    "@typescript-eslint/eslint-plugin": "3.1.0",
+    "@typescript-eslint/parser": "3.1.0",
+    "confusing-browser-globals": "1.0.9",
+    "eslint": "7.2.0",
+    "eslint-find-rules": "3.5.0",
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-import": "2.21.1",
+    "eslint-plugin-jest": "23.13.2",
     "eslint-plugin-jest-formatting": "1.2.0",
-    "eslint-plugin-no-secrets": "0.3.4",
+    "eslint-plugin-no-secrets": "0.6.8",
     "eslint-plugin-ramda": "2.5.1",
-    "eslint-plugin-react": "7.17.0",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "eslint-plugin-simple-import-sort": "5.0.0",
-    "typescript": "3.7.3"
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4.0.4",
+    "eslint-plugin-simple-import-sort": "5.0.3",
+    "typescript": "3.9.5"
   }
 }
