--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-intense",
-  "version": "0.6.1",
-  "description": "Eslint rules for the overly serious",
+  "version": "0.6.2",
+  "description": "ESLint rules for the overly serious",
   "repository": "dimitropoulos/eslint-config-intense",
   "license": "MIT",
   "keywords": [
@@ -43,7 +43,18 @@
     "lint": "eslint --ext=tsx --ext=ts --ext=mjs --ext=js --ext=jsx ."
   },
   "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
     "eslint": "^7.4.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-jest-formatting": "^2.0.0",
+    "eslint-plugin-no-secrets": "^0.6.8",
+    "eslint-plugin-ramda": "^2.5.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
     "typescript": "^3.9.6"
   },
   "dependencies": {
