--- a/package.json
+++ b/package.json
@@ -35,43 +35,45 @@
   "scripts": {
     "generate": "node generate-json.js",
     "prefind-deprecated": "yarn generate",
-    "find-deprecated": "eslint-find-rules --deprecated ./generated.json",
+    "find-deprecated": "eslint-find-rules --deprecated index.js",
     "prefind-unused": "yarn generate",
-    "find-unused": "eslint-find-rules --unused ./generated.json",
+    "find-unused": "eslint-find-rules --unused index.js",
     "predeploy": "yarn generate",
     "deploy": "yarn publish",
     "lint": "eslint --ext=tsx --ext=ts --ext=mjs --ext=js --ext=jsx ."
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
-    "eslint": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
+    "eslint": "^7.9.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-jest": "^24.0.1",
     "eslint-plugin-jest-formatting": "^2.0.0",
     "eslint-plugin-no-secrets": "^0.6.8",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-ramda": "^2.5.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "eslint-plugin-simple-import-sort": "^5.0.3",
-    "typescript": "^3.9.6"
+    "typescript": "^4.0.2"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "3.6.1",
-    "@typescript-eslint/parser": "3.6.1",
+    "@typescript-eslint/eslint-plugin": "4.1.1",
+    "@typescript-eslint/parser": "4.1.1",
     "confusing-browser-globals": "1.0.9",
-    "eslint": "7.4.0",
-    "eslint-find-rules": "3.5.0",
+    "eslint": "7.9.0",
+    "eslint-find-rules": "3.6.1",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-jest": "23.18.0",
+    "eslint-plugin-jest": "24.0.1",
     "eslint-plugin-jest-formatting": "2.0.0",
     "eslint-plugin-no-secrets": "0.6.8",
+    "eslint-plugin-node": "11.1.0",
     "eslint-plugin-ramda": "2.5.1",
-    "eslint-plugin-react": "7.20.3",
-    "eslint-plugin-react-hooks": "4.0.8",
+    "eslint-plugin-react": "7.20.6",
+    "eslint-plugin-react-hooks": "4.1.2",
     "eslint-plugin-simple-import-sort": "5.0.3",
-    "typescript": "3.9.6"
+    "typescript": "4.0.2"
   }
 }
