--- a/package.json
+++ b/package.json
@@ -43,37 +43,37 @@
     "lint": "eslint --ext=tsx --ext=ts --ext=mjs --ext=js --ext=jsx ."
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "eslint": "^7.18.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-jest-formatting": "^2.0.1",
-    "eslint-plugin-no-secrets": "^0.6.8",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-ramda": "^2.5.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "typescript": "^4.1.2"
+    "@typescript-eslint/eslint-plugin": "~4.15.2",
+    "@typescript-eslint/parser": "~4.15.2",
+    "eslint": "~7.20.0",
+    "eslint-plugin-eslint-comments": "~3.2.0",
+    "eslint-plugin-import": "~2.22.1",
+    "eslint-plugin-jest": "~24.1.5",
+    "eslint-plugin-jest-formatting": "~2.0.1",
+    "eslint-plugin-no-secrets": "~0.7.9",
+    "eslint-plugin-node": "~11.1.0",
+    "eslint-plugin-ramda": "~2.5.1",
+    "eslint-plugin-react": "~7.22.0",
+    "eslint-plugin-react-hooks": "~4.2.0",
+    "eslint-plugin-simple-import-sort": "~7.0.0",
+    "typescript": "~4.2.2"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "4.14.1",
-    "@typescript-eslint/parser": "4.14.1",
-    "confusing-browser-globals": "1.0.10",
-    "eslint": "7.18.0",
-    "eslint-find-rules": "3.6.1",
-    "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jest": "24.1.3",
-    "eslint-plugin-jest-formatting": "2.0.1",
-    "eslint-plugin-no-secrets": "0.6.8",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-ramda": "2.5.1",
-    "eslint-plugin-react": "7.22.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-simple-import-sort": "7.0.0",
-    "typescript": "4.1.3"
+    "@typescript-eslint/eslint-plugin": "~4.15.2",
+    "@typescript-eslint/parser": "~4.15.2",
+    "confusing-browser-globals": "~1.0.10",
+    "eslint": "~7.20.0",
+    "eslint-find-rules": "~3.6.1",
+    "eslint-plugin-eslint-comments": "~3.2.0",
+    "eslint-plugin-import": "~2.22.1",
+    "eslint-plugin-jest": "~24.1.5",
+    "eslint-plugin-jest-formatting": "~2.0.1",
+    "eslint-plugin-no-secrets": "~0.7.9",
+    "eslint-plugin-node": "~11.1.0",
+    "eslint-plugin-ramda": "~2.5.1",
+    "eslint-plugin-react": "~7.22.0",
+    "eslint-plugin-react-hooks": "~4.2.0",
+    "eslint-plugin-simple-import-sort": "~7.0.0",
+    "typescript": "~4.2.2"
   }
 }
