--- a/package.json
+++ b/package.json
@@ -33,47 +33,50 @@
   },
   "main": "index.js",
   "scripts": {
-    "generate": "node generate-json.js",
-    "prefind-deprecated": "yarn generate",
+    "build": "node build.js",
+    "prefind-deprecated": "yarn build",
     "find-deprecated": "eslint-find-rules --deprecated index.js",
-    "prefind-unused": "yarn generate",
+    "prefind-unused": "yarn build",
     "find-unused": "eslint-find-rules --unused index.js",
-    "predeploy": "yarn generate",
+    "predeploy": "yarn build",
     "deploy": "yarn publish",
     "lint": "eslint --ext=tsx --ext=ts --ext=mjs --ext=js --ext=jsx ."
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "~4.21.0",
-    "@typescript-eslint/parser": "~4.21.0",
-    "eslint": "~7.23.0",
+    "@typescript-eslint/eslint-plugin": "~4.24.0",
+    "@typescript-eslint/parser": "~4.24.0",
+    "eslint": "~7.26.0",
     "eslint-plugin-eslint-comments": "~3.2.0",
-    "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-jest": "~24.3.4",
-    "eslint-plugin-jest-formatting": "~2.0.1",
+    "eslint-plugin-import": "~2.23.2",
+    "eslint-plugin-jest": "~24.3.6",
+    "eslint-plugin-jest-formatting": "~3.0.0",
     "eslint-plugin-no-secrets": "~0.8.9",
     "eslint-plugin-node": "~11.1.0",
     "eslint-plugin-ramda": "~2.5.1",
-    "eslint-plugin-react": "~7.23.1",
+    "eslint-plugin-react": "~7.23.2",
     "eslint-plugin-react-hooks": "~4.2.0",
     "eslint-plugin-simple-import-sort": "~7.0.0",
-    "typescript": "~4.2.3"
+    "typescript": "~4.2.4"
+  },
+  "devDependencies": {
+    "@types/eslint": "^7.2.10"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "~4.21.0",
-    "@typescript-eslint/parser": "~4.21.0",
+    "@typescript-eslint/eslint-plugin": "~4.24.0",
+    "@typescript-eslint/parser": "~4.24.0",
     "confusing-browser-globals": "~1.0.10",
-    "eslint": "~7.23.0",
+    "eslint": "~7.26.0",
     "eslint-find-rules": "~3.6.1",
     "eslint-plugin-eslint-comments": "~3.2.0",
-    "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-jest": "~24.3.4",
-    "eslint-plugin-jest-formatting": "~2.0.1",
+    "eslint-plugin-import": "~2.23.2",
+    "eslint-plugin-jest": "~24.3.6",
+    "eslint-plugin-jest-formatting": "~3.0.0",
     "eslint-plugin-no-secrets": "~0.8.9",
     "eslint-plugin-node": "~11.1.0",
     "eslint-plugin-ramda": "~2.5.1",
-    "eslint-plugin-react": "~7.23.1",
+    "eslint-plugin-react": "~7.23.2",
     "eslint-plugin-react-hooks": "~4.2.0",
     "eslint-plugin-simple-import-sort": "~7.0.0",
-    "typescript": "~4.2.3"
+    "typescript": "~4.2.4"
   }
 }
