--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/dimitropoulos/eslint-config-intense",
   "engines": {
-    "node": ">=10"
+    "node": ">=16"
   },
   "main": "index.js",
   "scripts": {
@@ -59,7 +59,10 @@
     "typescript": "~4.3.5"
   },
   "devDependencies": {
-    "@types/eslint": "^7.2.13"
+    "@types/confusing-browser-globals": "^1.0.0",
+    "@types/eslint": "^7.28.0",
+    "@types/node": "^16.6.0",
+    "eslint-config-helpers": "^1.0.1"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "~4.28.1",
