--- a/package.json
+++ b/package.json
@@ -43,43 +43,44 @@
     "lint": "eslint --ext=tsx --ext=ts --ext=mjs --ext=js --ext=jsx ."
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "~4.29.1",
-    "@typescript-eslint/parser": "~4.29.1",
-    "eslint": "~7.32.0",
+    "@typescript-eslint/eslint-plugin": "~5.17.0",
+    "@typescript-eslint/parser": "~5.17.0",
+    "eslint": "~8.12.0",
     "eslint-plugin-eslint-comments": "~3.2.0",
-    "eslint-plugin-import": "~2.24.0",
-    "eslint-plugin-jest": "~24.4.0",
-    "eslint-plugin-jest-formatting": "~3.0.0",
+    "eslint-plugin-import": "~2.25.4",
+    "eslint-plugin-jest": "~26.1.3",
+    "eslint-plugin-jest-formatting": "~3.1.0",
     "eslint-plugin-no-secrets": "~0.8.9",
     "eslint-plugin-node": "~11.1.0",
     "eslint-plugin-ramda": "~2.5.1",
-    "eslint-plugin-react": "~7.24.0",
-    "eslint-plugin-react-hooks": "~4.2.0",
+    "eslint-plugin-react": "~7.29.4",
+    "eslint-plugin-react-hooks": "~4.4.0",
     "eslint-plugin-simple-import-sort": "~7.0.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.3"
   },
   "devDependencies": {
     "@types/confusing-browser-globals": "^1.0.0",
-    "@types/eslint": "^7.28.0",
-    "@types/node": "^16.6.1",
-    "eslint-config-helpers": "^1.1.0"
+    "@types/eslint": "^7.28.2",
+    "@types/node": "^16.11.6",
+    "eslint-find-rules": "~4.1.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "~4.29.1",
-    "@typescript-eslint/parser": "~4.29.1",
-    "confusing-browser-globals": "~1.0.10",
-    "eslint": "~7.32.0",
-    "eslint-find-rules": "~3.6.1",
+    "eslint-config-helpers": "^1.1.0",
+    "confusing-browser-globals": "1.0.10",
+
+    "@typescript-eslint/eslint-plugin": "~5.17.0",
+    "@typescript-eslint/parser": "~5.17.0",
+    "eslint": "~8.12.0",
     "eslint-plugin-eslint-comments": "~3.2.0",
-    "eslint-plugin-import": "~2.24.0",
-    "eslint-plugin-jest": "~24.4.0",
-    "eslint-plugin-jest-formatting": "~3.0.0",
+    "eslint-plugin-import": "~2.25.4",
+    "eslint-plugin-jest": "~26.1.3",
+    "eslint-plugin-jest-formatting": "~3.1.0",
     "eslint-plugin-no-secrets": "~0.8.9",
     "eslint-plugin-node": "~11.1.0",
     "eslint-plugin-ramda": "~2.5.1",
-    "eslint-plugin-react": "~7.24.0",
-    "eslint-plugin-react-hooks": "~4.2.0",
+    "eslint-plugin-react": "~7.29.4",
+    "eslint-plugin-react-hooks": "~4.4.0",
     "eslint-plugin-simple-import-sort": "~7.0.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.3"
   }
 }
