--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "es2015.iterable",
       "esnext",
     ],
-    "module": "es2015",
+    "module": "es2020",
     "moduleResolution": "node",
     "noUnusedLocals": false,
     "noUnusedParameters": false,
@@ -36,6 +36,7 @@
     "**/*.js",
     "**/*.jsx",
     "**/*.json",
+    "playground.tsx",
   ],
   "exclude": [
     "node_modules",
