--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/dimitropoulos/eslint-config-intense",
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "main": "index.js",
   "scripts": {
@@ -43,43 +43,43 @@
     "lint": "eslint --ext=tsx --ext=ts --ext=mjs --ext=js --ext=jsx ."
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "~5.17.0",
-    "@typescript-eslint/parser": "~5.17.0",
-    "eslint": "~8.12.0",
+    "@typescript-eslint/eslint-plugin": "~5.59.1",
+    "@typescript-eslint/parser": "~5.59.1",
+    "eslint": "~8.39.0",
     "eslint-plugin-eslint-comments": "~3.2.0",
-    "eslint-plugin-import": "~2.25.4",
-    "eslint-plugin-jest": "~26.1.3",
+    "eslint-plugin-import": "~2.27.5",
+    "eslint-plugin-jest": "~27.2.1",
     "eslint-plugin-jest-formatting": "~3.1.0",
     "eslint-plugin-no-secrets": "~0.8.9",
     "eslint-plugin-node": "~11.1.0",
     "eslint-plugin-ramda": "~2.5.1",
-    "eslint-plugin-react": "~7.29.4",
-    "eslint-plugin-react-hooks": "~4.4.0",
-    "eslint-plugin-simple-import-sort": "~7.0.0",
-    "typescript": "~4.6.3"
+    "eslint-plugin-react": "~7.32.2",
+    "eslint-plugin-react-hooks": "~4.6.0",
+    "eslint-plugin-simple-import-sort": "~10.0.0",
+    "typescript": "~5.0.4"
   },
   "devDependencies": {
     "@types/confusing-browser-globals": "^1.0.0",
-    "@types/eslint": "^8.4.1",
-    "@types/node": "^17.0.23",
-    "eslint-find-rules": "~4.1.0"
+    "@types/eslint": "8.37.0",
+    "@types/node": "18.16.1",
+    "eslint-find-rules": "4.1.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "~5.17.0",
-    "@typescript-eslint/parser": "~5.17.0",
+    "@typescript-eslint/eslint-plugin": "5.59.1",
+    "@typescript-eslint/parser": "5.59.1",
     "confusing-browser-globals": "1.0.11",
-    "eslint": "~8.12.0",
-    "eslint-config-helpers": "^1.1.0",
-    "eslint-plugin-eslint-comments": "~3.2.0",
-    "eslint-plugin-import": "~2.25.4",
-    "eslint-plugin-jest": "~26.1.3",
-    "eslint-plugin-jest-formatting": "~3.1.0",
-    "eslint-plugin-no-secrets": "~0.8.9",
-    "eslint-plugin-node": "~11.1.0",
-    "eslint-plugin-ramda": "~2.5.1",
-    "eslint-plugin-react": "~7.29.4",
-    "eslint-plugin-react-hooks": "~4.4.0",
-    "eslint-plugin-simple-import-sort": "~7.0.0",
-    "typescript": "~4.6.3"
+    "eslint": "8.39.0",
+    "eslint-config-helpers": "1.2.0",
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jest": "27.2.1",
+    "eslint-plugin-jest-formatting": "3.1.0",
+    "eslint-plugin-no-secrets": "0.8.9",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-ramda": "2.5.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "typescript": "5.0.4"
   }
 }
